--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
         "start": "webpack-dev-server --mode development"
     },
     "devDependencies": {
+        "@babel/core": "^7.17.9",
+        "@babel/preset-env": "^7.16.11",
+        "autoprefixer": "^10.4.5",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.7.1",
+        "extract-text-webpack-plugin": "4.0.0-beta.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.0",
         "postcss-loader": "^6.2.1",
         "style-loader": "^3.3.1",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.8.1"
     },
     "dependencies": {
         "-": "^0.0.1",
+        "babel-loader": "^8.2.5",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
-        "webpack": "^5.70.0"
+        "webpack": "^5.72.0"
     }
 }
